@@ -1,3 +1,7 @@
+[B]2.0.1[/B]
+- Webtv/Archive section "more" indexer fixed
+- Added episodes' sorting by title
+
 [B]2.0.0[/B]
 - Complete addon rework
 
